[project]
name = "secom-ade"
version = "0.1.0"
description = "Análise do dataset SECOM com técnicas de aprendizado de máquina"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]